--- a/src/style.css
+++ b/src/style.css
@@ -38,9 +38,17 @@ body {
     cursor: default;
 }
 
+body.index {
+    text-align: center;
+    background-color: black;
+    color: white;
+    margin-top: 40vh;
+}
+
 body.login {
     text-align: center;
     background: linear-gradient(130deg, #0fd8cb 0%, #26cde0 50%, #39beef 75%);
+    color: black;
     margin-top: 0;
     overflow-y: hidden;
 }
@@ -53,8 +61,19 @@ body.login {
     width: 500px;
     font-size: 20px;
     height: 110px;
-    overflow-y: auto;
+    overflow-y: hidden;
     display: none;
+}
+
+#sreadBlackout {
+    display: none;
+    position: absolute;
+    z-index: 1000000;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: black;
 }
 
 .dimback {
@@ -81,6 +100,11 @@ body.login {
     width: 400px;
     left: calc(50vw - 200px);
     text-align: left;
+}
+
+.index.logo {
+    height: 20vh;
+    margin-bottom: 50px;
 }
 
 .login.logo {
@@ -159,6 +183,11 @@ body.login {
 .corner.bottom.small {
     top: unset;
     bottom: 10px;
+}
+
+.natural {
+    width: unset!important;
+    height: unset!important;
 }
 
 .bottom {
